--- a/FlaskServer/templates/production_main.html
+++ b/FlaskServer/templates/production_main.html
@@ -186,11 +186,11 @@
     <!--<button type="submit" class="btn btn-secondary col-1">필터 적용</button>-->
 </form>
 <hr/>
-<input hidden id="info_list" value="{{ object.production_main_info_list() }}"/>
-<input hidden id="model_list" value="{{ object.production_main_model() }}"/>
-<input hidden id="history_list" value="{{ object.production_main_history() }}"/>
-<input hidden id="specific_list" value="{{ specific_list }}"/>
+<!--<input hidden id="info_list" value="{# object.production_main_info_list() #}"/>-->
+<!--<input hidden id="model_list" value="{# object.production_main_model() #}"/>-->
+<!--<input hidden id="history_list" value="{# object.production_main_history() #}"/>-->
 <input hidden id="main_rows" value="{{ object.main_table_rows() }}"/>
+<input hidden id="specific_list" value="{{ specific_list }}"/>
 <table class="table table-striped table-bordered table-sm text-center tablesorter" id="main_table">
     <thead class="thead-dark">
     <tr>
