--- a/FlaskServer/templates/login.html
+++ b/FlaskServer/templates/login.html
@@ -22,7 +22,7 @@
         <i class="fas fa-lock" aria-hidden="true"></i>
         <input type="password" placeholder="Password" name="passwd_hash" id="passwd_hash" value="">
     </div>
-        <input id="sign" class="btn" type="submit" name="" value="Sign In">
+        <input style="border-color: #59cad0" id="sign" class="btn" type="submit" name="" value="Sign In">
     </form>
 </div>
 <script>
