--- a/FlaskServer/templates/main_base.html
+++ b/FlaskServer/templates/main_base.html
@@ -142,52 +142,52 @@
         <div class="sidebar col-2">
             <ul class="nav nav-tabs flex-column">
                 <li class="nav-item active">
-                    <a class="nav-link" href="/">
-                        "재고관리 화면"
+                    <a class="nav-link" href="/product_main">
+                        "재고 관리"
                         <span class="sr-only">(current)</span>
                     </a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="/manufacture_main">
-                        "생산관리 화면"
+                        "생산 관리"
                         <span class="sr-only">(current)</span>
                     </a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="/sales_main">
-                        "영업관리 화면"
+                        "영업 관리"
                         <span class="sr-only">(current)</span>
                     </a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="/statistics_main ">
-                        "통계 화면"
+                        "통계"
                         <span class="sr-only">(current)</span>
                     </a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="/shipment_main">
-                        "Test 화면"
+                        "Test"
                     </a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="/business_goal">
-                        "Business goal 화면"
+                        "Business goal"
                     </a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="/sales_performance">
-                        Sales performance 화면"
+                        Sales performance"
                     </a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="/partners_list">
-                        Partners list 화면"
+                        Partners list"
                     </a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="/receiving_inspection">
-                        Receiving inspection 화면"
+                        Receiving inspection"
                     </a>
                 </li>
             </ul>
