--- a/FlaskServer/templates/menu.html
+++ b/FlaskServer/templates/menu.html
@@ -16,28 +16,34 @@
         <h1 align="center">Main Menu</h1>
     </div>
     <div style="float: left; width: 50%">
-        <form action="/" method="GET">
-        <button style="height: 180px;" class="btn" type="submit" value="">재고 관리 화면</button>
+        <form action="/product_main" method="GET">
+            <button style="height: 180px;" class="btn" type="submit" value="">
+                <i class="fas fa-user" aria-hidden="true"></i> 재고 관리 화면
+            </button>
         </form>
     </div>
     <div style="float: right; clear: right; width: 50%">
         <form action="/manufacture_main" method="GET">
-        <button style="height: 180px" class="btn" type="submit" value="">생산 관리 화면</button>
+            <button style="height: 180px" class="btn" type="submit" value="">
+        <i class="fas fa-user" aria-hidden="true"></i> 생산 관리 화면</button>
         </form>
     </div>
     <div style="float: left; width: 50%">
         <form action="/sales_main" method="GET">
-        <button style="height: 180px" class="btn" type="submit" value="">영업 관리 화면</button>
+            <button style="height: 180px" class="btn" type="submit" value="">
+        <i class="fas fa-user" aria-hidden="true"></i> 영업 관리 화면</button>
         </form>
     </div>
     <div style="float: right; clear: right; width: 50%">
         <form action="/statistics_main" method="GET">
-        <button style="height: 180px" class="btn" type="submit" value="">통계 화면</button>
+            <button style="height: 180px" class="btn" type="submit" value="">
+        <i class="fas fa-user" aria-hidden="true"></i> 통계 화면</button>
         </form>
     </div>
     <div>
         <form action="/logout" method="GET">
-        <button style="height: 55px" class="btn" type="submit" value="">Log out</button>
+            <button style="height: 55px" class="btn" type="submit" value="">
+                <i class="fas fa-sign-out-alt"></i> Log out</button>
         </form>
     </div>
 </div>
