--- a/FlaskServer/templates/sales_main.html
+++ b/FlaskServer/templates/sales_main.html
@@ -183,7 +183,7 @@
 {% endblock %}
 {% block title %} 영업 페이지 {% endblock %}
 {% block body_title %}Title{% endblock %}
-{% block main_title %}영업 화면{% endblock %}
+{% block main_title %}영업{% endblock %}
 {% block body %}
 <input hidden id="main_rows" value="{{ object.sales_list() }}"/>
 <input hidden id="specific_list" value="{{ specific_list }}"/>
