--- a/FlaskServer/templates/statistics_main.html
+++ b/FlaskServer/templates/statistics_main.html
@@ -168,7 +168,7 @@
 {% endblock %}
 {% block title %} 통계 페이지 {% endblock %}
 {% block body_title %}Title{% endblock %}
-{% block main_title %}통계 화면{% endblock %}
+{% block main_title %}통계 그래프{% endblock %}
 {% block body %}
 <h2 class="text-center">재고 DB Graph</h2>
 <div id="barChart"></div>
