--- a/FlaskServer/static/style.css
+++ b/FlaskServer/static/style.css
@@ -50,7 +50,7 @@ body{
 .btn{
     width: 100%;
     background: none;
-    border: 2px solid #59cad0;
+    border: 2px solid white;
     color: white;
     //padding: 5px;
     font-size: 25px;
@@ -66,6 +66,6 @@ body{
     color: white;
     transform: translate(-50%, -50%);
     border: 4px solid white;
-    background-color: #002752;
+    background-color: #150a54;
     //background-color: rgba(255, 255, 255, 0.5);
 }
