--- a/FlaskServer/templates/base.html
+++ b/FlaskServer/templates/base.html
@@ -20,7 +20,9 @@
         body {
         padding-top: 40px;
         padding-bottom: 40px;
-        background-color: #4263b7;
+        background-image: url("../static/img/03595_serenity_5120x2880.jpg");
+        background-repeat: no-repeat;
+        background-attachment: fixed;
         margin-left: auto;
         margin-right: auto;
       }
