--- a/FlaskServer/templates/manufacture.html
+++ b/FlaskServer/templates/manufacture.html
@@ -28,7 +28,7 @@
 {% endblock %}
 {% block title %} 생산 페이지 {% endblock %}
 {% block body_title %}Title{% endblock %}
-{% block main_title %}생산 화면{% endblock %}
+{% block main_title %}생산 관리{% endblock %}
 {% block body %}
 <input hidden id="main_rows" value="{{ object.manufacture_list() }}"/>
 <input hidden id="specific_list" value="{{ specific_list }}"/>
