--- a/FlaskServer/templates/production_main.html
+++ b/FlaskServer/templates/production_main.html
@@ -18,6 +18,7 @@
         //detect_state_filter();
         itemChange();
         add_and_delete_row_btn('production_main');
+        filtering();
 
         $('#state_submit_btn').click(function () {
             if ($('#state').val().length == 0) {
@@ -58,6 +59,40 @@
             console.log("Filter Value is Changed");
             itemChange();
         });
+
+        function filtering() {
+            $('#filter_btn').click(function () {
+                var startDate = $('#startDate').val();
+                var endDate = $('#endDate').val();
+                var filter = $('#filter').val();
+                var sub_filter = $('#sub_filter').val();
+                console.log("sDate : " + startDate + " eDate : " + endDate + " filter : " + filter + " sFilter : " + sub_filter);
+                $.ajax({
+                    url: "/filtering2",
+                    data: {
+                        'sDate': startDate,
+                        'eDate': endDate,
+                        'filter': filter,
+                        'sub_filter': sub_filter
+                    },
+                    type: "GET",
+                    dataType: "json"
+                })
+                    .done(function (json) {
+                        console.log("Filtering Ajax Done : \n" + json);
+                        $('#pagination').twbsPagination('destroy');
+                        pagination_test_ver('production_main', 20, json)
+                    })
+                    .fail(function (xhr, status, errorThrown) {
+                        $("#filter_btn").html("오류발생<br>")
+                            .append("오류명 : " + errorThrown + "<br>")
+                            .append("상태 : " + status);
+                    })
+                    .always(function (xhr, status) {
+                        //$("#barChart").html("요청 완료");
+                    });
+            });
+        }
 
         function itemChange() {
             var selectItem = $("#filter").val();
@@ -127,7 +162,7 @@
 {% endblock %}
 {% block title %} 재고관리 페이지 {% endblock %}
 {% block body_title %}Title{% endblock %}
-{% block main_title %}재고관리 화면{% endblock %}
+{% block main_title %}재고 관리{% endblock %}
 {% block body %}
 <!--<form class="form-inline" action="/search" method="POST">
 <form class="form-inline" action="/filtering2" method="POST">-->
@@ -148,7 +183,7 @@
         <select id="sub_filter" name="sub_filter" class="btn btn-secondary col-1" value="">
             <!-- Dynamic creation -->
         </select>
-        <button type="submit" class="btn btn-secondary col-1">필터 적용</button>
+        <button type="button" id="filter_btn" class="btn btn-secondary col-1">필터 적용</button>
         <button type="button" id="state_change_btn" class="btn btn-warning col-1" data-toggle="modal"
                 data-target="#shipment_modal">상태 변경
         </button>
@@ -233,13 +268,14 @@
                         <table class="table table-striped table-bordered text-center" id="insert_table">
                             <thead class="thead-dark">
                             <tr>
+                                <th>주 차</th>
                                 <th>모델명</th>
                                 <th>시리얼넘버</th>
                                 <th>담당자</th>
                             </tr>
                             </thead>
                             <tbody>
-
+                                <!-- insert_table().js -->
                             </tbody>
                         </table>
                     </div>
@@ -249,6 +285,7 @@
                     <button type="button" id='btn-add-row' class="btn offset-4 btn-secondary">행 추가하기</button>
                     <button type="button" id='btn-delete-row' class="btn btn-secondary">행 삭제하기</button>
                     <button type="submit" id="insert_submit_btn" class="btn btn-warning">확 인
+                    <button type="button" class="btn btn-warning" data-dismiss="modal">취 소
                     </button>
                 </div>
             </div>
@@ -285,6 +322,7 @@
                 <!-- Modal Footer -->
                 <div class="modal-footer">
                     <button type="submit" class="btn btn-warning">확 인
+                    <button type="button" class="btn btn-warning" data-dismiss="modal">취 소
                     </button>
                 </div>
             </div>
