19-03-05 Added Module & bug fix & feedback

--- a/FlaskServer/templates/main_base.html
+++ b/FlaskServer/templates/main_base.html
@@ -143,51 +143,51 @@
             <ul class="nav nav-tabs flex-column">
                 <li class="nav-item active">
                     <a class="nav-link" href="/product_main">
-                        "재고 관리"
+                        재고 관리
                         <span class="sr-only">(current)</span>
                     </a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="/manufacture_main">
-                        "생산 관리"
+                        생산 관리
                         <span class="sr-only">(current)</span>
                     </a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="/sales_main">
-                        "영업 관리"
+                        영업 관리
                         <span class="sr-only">(current)</span>
                     </a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="/statistics_main ">
-                        "통계"
+                        통계
                         <span class="sr-only">(current)</span>
                     </a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="/shipment_main">
-                        "Test"
+                        Test
                     </a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="/business_goal">
-                        "Business goal"
+                        Business goal
                     </a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="/sales_performance">
-                        Sales performance"
+                        Sales performance
                     </a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="/partners_list">
-                        Partners list"
+                        Partners list
                     </a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="/receiving_inspection">
-                        Receiving inspection"
+                        Receiving inspection
                     </a>
                 </li>
             </ul>
