--- a/FlaskServer/templates/production_main.html
+++ b/FlaskServer/templates/production_main.html
@@ -19,6 +19,7 @@
         add_and_delete_row_btn('production_main');
         filtering();
         getInsertModalValueFromManufactureDB();
+        detail_modification_btn_event();
 
         $('#insert_btn').click(function () {
             $('#insert_table > tbody:last').empty();
@@ -102,19 +103,24 @@
         function getInsertModalValueFromManufactureDB() {
             var _week, _model = null;
             var result = new Array();
-            $(document).on("change", $('input[name=insert_week]'), function () {
+            $(document).on("change", $('#row_count'), function () {
+                console.log($('#row_count').val());
+            });
+            $('#row_count').on("change", function () {
+                console.log($('#row_count').val());
+            });
+
+            $(document).on("keyup", $('input[name=week].value'), function () {
                 _week = $('input[name=insert_week]').val();
                 console.log('Week is changed : ' + _week);
                 result[0] = _week;
             });
 
-            $(document).on("change", $('input[name=insert_model]'), function () {
+            $(document).on("mouseleave", $('select[name=model]'), function () {
                 _model = $('input[name=insert_model]').val();
                 console.log('Model is changed : ' + _model);
                 result[1] = _model;
             });
-
-
 
             $(document).on("change", result, function () {
                 if (_week && _model) {
@@ -210,6 +216,83 @@
 
     });
 
+    function detail_modification_btn_event() {
+        $('#modify_btn').on('click', function () {
+            $('#detail_modal').modal('hide');
+            detail_modification_table();
+        });
+    }
+
+    function detail_modification_table() {
+        // Table initialization
+        $('#detail_modification_table > tbody:last').empty();
+        $('#detail_modification_info > tbody:last').empty();
+
+        var received_id = $('#modify_btn').val();
+        console.log("Received ID : " + received_id);
+        if (received_id == undefined || received_id == 'None')
+            alert("Detail modification modal error");
+
+        $.ajax({
+            url: "/getDetailTable",
+            data: {
+                'product_info_id': received_id
+            },
+            type: "GET",
+            dataType: "json"
+        })
+            .done(function (json) {
+                console.log("Detail Modification Table Ajax is DONE");
+                console.log(json);
+
+                $('#detail_modification_info').append(
+                    $('<tr>').append(
+                        $('<th class="text-center">').append("Model: " + json[0]['model']),
+                        $('<th class="text-center">SN: <input type="text" name="sn" value=' + json[0]['sn'] + '>'),
+                        $('<th class="text-center">생산 Week: <input type="text" name="week" value=' + json[0]['week'] + '>'),
+                        $('<th class="text-center">Header: <input type="text" name="header" value=' + json[0]['header'] + '>'),
+                        $('<input type="hidden" name="product_id" value=' + received_id + '>')
+                    )
+                );
+                for (var i = 1; i < json.length; i++) {
+                    $('#detail_modification_table').append(
+                        $('<tr>').append(
+                            $('<th class="text-center"><input type="text" name="date" value=' + json[i]['date'] + '>'),
+                            $('<th class="text-center"><input type="text" name="location" value=' + json[i]['location'] + '>'),
+                            //$('<th class="text-center"><input type="text" name="state" value=' + json[i]['state'] + '>'),
+                            //$('<th class="text-center"><input type="text" name="reason" value='+ json[i]['reason'] + '>')
+                            $('<th class="text-center"><select name="state" value=' + json[i]['state'] + '>'+
+                                '<option selected hidden>'+ json[i]['state'] +'</option>' +
+                                '<option>재고</option>' +
+                                '<option>출고</option>' +
+                                '<option>폐기</option>' +
+                                '</select>'),
+                            $('<th class="text-center"><select name="reason" value=' + json[i]['reason'] + '>' +
+                                '<option selected hidden>'+ json[i]['reason'] +'</option>' +
+                                '<option>신규생산</option>' +
+                                '<option>판매</option>' +
+                                '<option>기증</option>' +
+                                '<option>내수용</option>' +
+                                '<option>A/S</option>' +
+                                '<option>불량</option>' +
+                                '<option>반납</option>' +
+                                '<option>이동</option>' +
+                                '</select>')
+                        )
+                    );
+                }
+            })
+            .fail(function (xhr, status, errorThrown) {
+                $("#detail_modification_table").html("오류발생<br>")
+                    .append("오류명 : " + errorThrown + "<br>")
+                    .append("상태 : " + status);
+            })
+            .always(function (xhr, status) {
+                //$("#detail_table").html("요청 완료");
+            });
+
+    }
+
 </script>
 {% endblock %}
 {% block title %} 재고관리 페이지 {% endblock %}
@@ -238,8 +321,7 @@
         <button type="button" id="filter_btn" class="btn btn-secondary col-1">필터 적용</button>
         <!--<button type="button" id="state_change_btn" class="btn btn-warning col-1" data-toggle="modal"
                 data-target="#shipment_modal">상태 변경-->
-        <button type="button" id="state_change_btn" class="btn btn-warning col-1">상태 변경
-        </button>
+        <button type="button" id="state_change_btn" class="btn btn-warning col-1">상태 변경</button>
         <button type="button" id="insert_btn" class="btn btn-warning col-1" data-toggle="modal"
                 data-target="#insert_modal"> 등록
         </button>
@@ -419,11 +501,56 @@
             </div>
             <!-- Modal Footer -->
             <div class="modal-footer">
-                <button type="button" class="btn btn-warning" data-dismiss="modal">확 인
+                <button type="button" id="modify_btn" class="btn btn-warning" value="" data-toggle="modal"
+                        data-target="#detail_modification_modal">수정 모드
                 </button>
+                <button type="button" class="btn btn-warning" data-dismiss="modal">확 인</button>
             </div>
         </div>
 
+    </div>
+</div>
+<!-- The Detail Console Modal -->
+<div class="modal fade" id="detail_modification_modal">
+    <div class="modal-dialog modal-xl">
+        <form class="form-inline" action="/sendDetailModificationModalValue" method="POST" enctype=multipart/form-data>
+            <div class="modal-content">
+                <!-- Modal Header -->
+                <div class="modal-header table-responsive">
+                    <h1>상세 화면</h1>
+                </div>
+                <div>
+                    <table class="table table-borderless" id="detail_modification_info">
+                        <tbody>
+                    <!--  Call of the Java Script Function (table) -->
+                    </tbody>
+                    </table>
+                </div>
+                <!-- Modal Body -->
+                <div class="modal-body">
+                    <div class="table-responsive">
+                        <table class="table table-striped table-bordered text-center" id="detail_modification_table">
+                            <thead class="thead-dark">
+                            <tr>
+                                <th>날짜</th>
+                                <th>위치</th>
+                                <th>상태</th>
+                                <th>비고(사유)</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                        <!--  Call of the Java Script Function (table) -->
+                        </tbody>
+                        </table>
+                    </div>
+                </div>
+                <!-- Modal Footer -->
+                <div class="modal-footer">
+                    <button type="submit" class="btn btn-warning">수 정
+                    </button>
+                </div>
+            </div>
+        </form>
     </div>
 </div>
 {% endblock %}
